# SYCL-Small-Linear-Algebra

./: CMakeLists.txt  test.cpp
app/: CMakeLists.txt  test1.cpp
include/small_la/: column_matrix.h  small_matrix.h  small_matrix.hpp  stacked_vector.h  sycl_column_matrix.h
src/: CMakeLists.txt  small_la.cpp
tests/: CMakeLists.txt  SVD_test.cpp  small_matrix_test_helpers.h
